add solr installation